Shorten rolltype names, add hint to them. Add character health tracking.

--- a/static/style.css
+++ b/static/style.css
@@ -20,3 +20,11 @@ button{
 .button-wrapper {
 	padding: 2px;
 }
+
+.roll-type-variation {
+	margin-bottom: 20px;
+}
+
+.roll-type-button {
+	margin-bottom: 0px;
+}
