Handle area Damage or Heal
- Create a new form template: setupAreaDamageForm.html
- add ShowAreaDamageForm function to display the new form
- add areaHealthModificationCtrl to handle the health change.
- add some css to design the new form.

--- a/static/style.css
+++ b/static/style.css
@@ -27,6 +27,10 @@ button{
 	width: 100%;
 }
 
+#charactersInAreaDamage {
+	width: 100%;
+}
+
 .button-wrapper {
 	padding: 2px;
 }
@@ -73,4 +77,10 @@ table tr.active{
 }
 table tr.active td{
 	color: white;
+}
+.medium-height {
+	height: 45vh;
+}
+.medium-margin-top {
+	margin-top: 10px;
 }
