- Leaving the app need confirm. - Area damage set easier - Clean code.

--- a/static/style.css
+++ b/static/style.css
@@ -27,8 +27,18 @@ button{
 	width: 100%;
 }
 
-#charactersInAreaDamage {
+.charactersInAreaDamage {
 	width: 100%;
+}
+
+.charactersInAreaDamage th {
+	background-color: #008CBA;
+}
+
+.charactersInAreaDamage .radioWithLabel {
+	position: relative;
+	top: 2px;
+	right: 5px;
 }
 
 .button-wrapper {
